--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "fbjs": "^1.0.0",
     "react": "16.6.1",
-    "react-native": "0.57.5"
+    "react-native": "0.57.5",
+    "react-native-gesture-handler": "^1.0.9",
+    "react-navigation": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-0",
     "babel-jest": "23.6.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.49.2",
